# python-openai-projects

./: .gitignore  02-getting-started.ipynb  03-prompt-design.ipynb  04-color-palette-generator.ipynb  README.md  requirements.txt
00-playground/: 02-getting-started.ipynb  06-chat-api-gpt-4.ipynb  20-tech-newsletter.html  28-simple-chatgpt-clone.ipynb  32-space.sh  66-chuck-norris-jokes.py  README.md
00-playground/63-claude-code/ragchatbot/: .env.example  .gitignore  CLAUDE.md  README.md  frontend-changes.md  main.py  pyproject.toml  query_flow_diagram.txt  run.sh
00-playground/63-claude-code/ragchatbot/backend/: ai_generator.py  app.py  config.py  document_processor.py  models.py  rag_system.py  search_tools.py  session_manager.py  vector_store.py
00-playground/63-claude-code/ragchatbot/backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_config.py  test_course_search_tool.py  test_rag_system.py  test_vector_store.py
00-playground/63-claude-code/ragchatbot/docs/: course1_script.txt  course2_script.txt  course3_script.txt  course4_script.txt
00-playground/63-claude-code/ragchatbot/frontend/: index.html  script.js  style.css
00-playground/63-claude-code/ragchatbot/scripts/: format.sh  lint.sh
01-color-palette-generator/: README.md  app.py
02-gpt-4-chatbot/: README.md  chatbot.py
03-automatic-code-reviewer/: README.md  reviewer.py  tree.py
04-gpt-4-ai-spotify-playlist-generator/: README.md  app.py
05-movie-recommendation-system/: README.md  movie-recommendation.ipynb  movie_embeddings_cache.pkl
06-qa-bot/: F1_QA_Assistant.ipynb  README.md  cache.db  f1_2022.csv  f1_utilities.py  utilities.py
07-sentiment-analysis-project/: README.md  Reddit Sentiment Analysis.ipynb  epl_top_8.csv
08-book-summarizer-project/: README.md  cache.json  summarize.py  utilities.py
09-choose-your-own-adventure/: README.md  app.py
10-whisper-transcription-tool/: README.md  (+1 more)
(+638 files in other folders)
